name:           etude
version:        0.1.0.0
synopsis:       Etude intermediate program representation
homepage:       http://github.com/zadarnowski/etude
category:       Language
stability:      alpha

author:         Patryk Zadarnowski
maintainer:     Patryk Zadarnowski <pat@jantar.org>

copyright:
  Copyright (c) 2003-2015 Patryk Zadarnowski

description:
  Etude intermediate program representation.

cabal-version:  >= 1.18
build-type:     Simple
license:        BSD3
license-file:   LICENSE

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -Werror

  exposed-modules:
    Language.Etude.Syntax

  build-depends:
    base            >= 4.7 && < 5,
    containers      >= 0.5.5.1
    ansi-wl-pprint  >= 0.6.7.1
